	
0.68
	NOTE: dummy_root is now the only supported mode

	- removed option "use_dummy_root"
	- removed option "stderr_file"
	- removed option "stdout_file"
	- removed function rename_snap()
	- removed function backup_default_snap()
	- removed function restore_default_snap()
	- removed function mrt_remove()
	- removed function clear_driver_files()
	- removed the code within the ENABLE_OBSOLETE_CODE blocks
	- converted more static arrays to dynamically allocated memory
	- writing non-driver specific options into dummy_root INI
	- added a small tool called "create_report", which will create reports out of the output XMLs
	- removed option "result_file" in favor of "report 1"
	- removed html_enc parameter from print_driver_info()
	- removed option "log_devices", because MESS already has the -listdevices option
	- changed valgrind outfile file to <driver_string>.valgrind_<pid>
	- valgrind output files are now written to the "output_folder"
	- added option "valgrind_binary" to specify the valgrind binary location
	- added option "valgrind_parameters" to specify the valgrind parameters (--log-file is added by mame_regtest)
	- put valgrind code into compile-time defijne USE_VALGRIND
	- removed option "validate_listxml" - DTD validation is now always performed
	- using folder "mrt_temp" to store temporary files
		- tmp_stdout
		- tmp_stderr
		- mrt_debugscript
		- dummy_ini folder
	- added function is_absolute_path()
	- changed most relative paths to be absolute ones
	- restructed get_executable() a bit
	- empty "additional_options" were appended
	- quoted all parts of command-line string, that could contain whitespaces as well as the whole command-line string
	- added function append_quoted_string()

	create_report
	- added "report 1", which creates a file with all driver, that didn't return 0
	- added "report 2", which creates a file with all driver, that didn't return 0 along with stderr information
	TODO: ... all changes